examples/tests/snapshots/10_widgets_interaction__headless_snapshot_click_increments.snap
---
source: examples/tests/10_widgets_interaction.rs
expression: "drive(&[&[down, up], &[]])"
---
··················································
·Tab/Shift+Tab·focuses,·Enter/Space·or·click·activ
·ates,·r·resets,·q/Escape·quits.··················
··················································
···Increment·(+1)····Decrement·(-1)········Reset··
··················································
··Count:·0········································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································

--- frame ---
··················································
·Tab/Shift+Tab·focuses,·Enter/Space·or·click·activ
·ates,·r·resets,·q/Escape·quits.··················
··················································
···Increment·(+1)····Decrement·(-1)········Reset··
··················································
··Count:·1········································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
··················································
