examples/tests/snapshots/10_widgets_interaction__png_snapshot.snap
---
source: examples/tests/10_widgets_interaction.rs
expression: png
extension: png
snapshot_kind: binary
---
